# ChurchPresenter

./: .gitignore  .gitmodules  AGENT.md  AGENT_NOTES.md  BUILD_INSTALLERS.md  CLAUDE.md  CODING_STANDARDS.md  COMPANION_API.md  CONSOLIDATION_SUMMARY.md  DEVELOPMENT_GUIDE.md  DMG_BUILD_SUCCESS.md  DOCS_README.md  FEATURES.md  MEMORY_CONFIGURATION.md  MEMORY_FIX.md  MEMORY_FIX_FINAL.md  MainWindow.xaml  MainWindow.xaml.cs  QUICK_START_INSTALLERS.md  README.md  WINDOWS_BUILD_GUIDE.md  _Feature.md  app_log.txt  cleanup_check.sh  generate_release_notes.py  gradle.properties  settings.gradle.kts  setup-github-actions.sh
.github/workflows/: build-all.yml  build-installers.yml  build-linux.yml  build-macos.yml  build-self-hosted.yml  build-selfhosted.yml  build-windows.yml  build.yml  cleanup-artifacts.yml  release-selfhosted.yml  release.yml  test.yml
.run/: ChurchPresenter.run.xml
Bibles/: compare.html  languages.txt  xml_to_spb.py
Bibles/ENG/Bible in Worldwide English/: ENG_BWE96_(BIBLE IN WORLDWIDE ENGLISH).spb  ENG_BWE_(BIBLE IN WORLDWIDE ENGLISH NT).spb  ENG_BWE_(BIBLE IN WORLDWIDE ENGLISH).spb
Bibles/ENG/Brentons English Septuagint/: ENG_LXXE_(BRENTON'S ENGLISH SEPTUAGINT).spb
Bibles/ENG/Diaglot NT - 1865/: ENG_DIAGLOT_(DIAGLOT NT - 1865).spb
Bibles/ENG/English Majority Text Version/: ENG_EMTV_(ENGLISH MAJORITY TEXT VERSION).spb
Bibles/ENG/Etheridge/: ENG_ETHERIDGE_(THE PESCHITO SYRIAC NEW TESTAMENT).spb
Bibles/ENG/Geneva Bible/: ENG_GB_(GENEVA BIBLE).spb
Bibles/ENG/ISV NT/: ENG_ISV_(ISV NT).spb
Bibles/ENG/Jewish Publication Society AT/: ENG_JPS_(JEWISH PUBLICATION SOCIETY AT).spb
Bibles/ENG/King James/KJV+/: ENG_KJV_(KJV+).spb
Bibles/ENG/Leeser Old Testament/: ENG_LEESER_(LEESER OLD TESTAMENT).spb
Bibles/ENG/Living Oracles NT/: ENG_LONT_(LIVING ORACLES NT).spb
Bibles/ENG/Montgomery New Testament/: ENG_MONT_(MONTGOMERY NEW TESTAMENT).spb
Bibles/ENG/New Heart English Bible/: ENG_NHEBJE_(NEW HEART ENGLISH BIBLE - JEHOVAH EDITION).spb  ENG_NHEBME_(NEW HEART ENGLISH BIBLE - MESSIANIC EDITION).spb
Bibles/ENG/Noyes Translation/: ENG_NOYES_(NOYES TRANSLATION).spb
Bibles/ENG/Open English Bible (Commonwealth Spelling)/: ENG_OEBCTH_(OPEN ENGLISH BIBLE (COMMONWEALTH SPELLING)).spb
Bibles/ENG/Open English Bible (US Spelling)/: ENG_OEB_(OPEN ENGLISH BIBLE (US SPELLING)).spb
Bibles/ENG/Revised 1833 Webster Version/: ENG_RWEBSTER_(REVISED 1833 WEBSTER VERSION).spb
Bibles/ENG/Revised 1833 Webster Version with Strongs/: ENG_RWEBSTER_(REVISED 1833 WEBSTER VERSION WITH STRONGS).spb
Bibles/ENG/Revised Youngs Literal Translation NT/: ENG_RYLT_(REVISED YOUNG'S LITERAL TRANSLATION NT).spb
Bibles/ENG/Samaritan Pentateuch in English/: ENG_SPE_(SAMARITAN PENTATEUCH IN ENGLISH).spb
Bibles/ENG/The Book of Mormon/: ENG_BOM_(THE BOOK OF MORMON).spb
Bibles/ENG/The Common Edition New Testament/: ENG_TCE_(THE COMMON EDITION NT).spb
Bibles/ENG/The Epistle to the Galatians English version of the translation by Hermann Detering/: ENG_MARCGAL_(THE EPISTLE TO THE GALATIANS(DETERING)).spb
Bibles/ENG/The Lexham English Bible/: ENG_LEB_(THE LEXHAM ENGLISH BIBLE).spb
Bibles/ENG/The Orthodox Jewish Brit Chadasha/: ENG_ORTHJBC_(THE ORTHODOX JEWISH BRIT CHADASHA).spb
Bibles/ENG/The Riverside New Testament/: ENG_RNT_(THE RIVERSIDE NEW TESTAMENT).spb
Bibles/ENG/Torreys Topical Textbook/: ENG_TTB_(TORREY'S TOPICAL TEXTBOOK).spb
Bibles/ENG/Wesleys NT/: ENG_WESLEY_(WESLEY'S NT).spb
Bibles/ENG/Weymouth NT/: ENG_WMTH_(WEYMOUTH NT).spb
Lottie-Gen/: lottie-generator.html
_softprojector-bibles-song/lottie-sample/: test.json  test.lottie
_softprojector-bibles-song/ppt-key/: Вечные Небеса.key  Когда в Твои слова вникаю.pptx  Ода Бог.key  Тебе Отец хвала и слава copy.pptx
composeApp/: build.gradle.kts
docs_archive/: CODING_STANDARDS.md  CODING_STANDARDS_SUMMARY.md  PERSONAL_NOTES.md  TODO_CLEANUP.md
gradle/: libs.versions.toml
native/decklink/: BUILD.md  CMakeLists.txt  DeckLinkAPI.tlb  DeckLinkAPI_h.h  DeckLinkAPI_i.c  DeckLinkManager.java  PROMT.md  build_info.bat  build_linux.sh  build_macos.sh  build_now.bat  build_windows.bat  decklink_info.cpp  decklink_jni.cpp  decklink_jni.exp  decklink_jni.lib  libdecklink_jni.dylib  org_churchpresenter_app_churchpresenter_composables_DeckLinkManager.h
scripts/: generate_interlinear.py  generate_strongs.py
(+571 files in other folders)
